--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --experimental-strip-types --watch src/server.ts",
-    "build": "tsup src/server.ts --format esm,cjs --out-dir dist --dts"
+    "build": "tsup src/server.ts --out-dir dist --dts build --output public"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "fastify": "^5.5.0",
+    "fastify-cors": "^6.0.3",
     "zod": "^4.0.17"
   },
   "devDependencies": {
