chore: add tsup config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "tsx src/server.ts",
-    "build": "tsup src",
+    "build": "tsup",
     "start": "node dist/server.js"
   },
   "keywords": [],
